swagger: Added more docs
