# docs/swagger.json
@@ -4,6 +4,40 @@
         "contact": {}
     },
     "paths": {
+        "/list": {
+            "post": {
+                "description": "Create a List with auto-set Order (set as last Order in database)",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "List"
+                ],
+                "summary": "Create a List",
+                "parameters": [
+                    {
+                        "description": "Title of this List",
+                        "name": "list",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.List"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.SwaggerList"
+                        }
+                    }
+                }
+            }
+        },
         "/lists": {
             "get": {
                 "description": "Get All Lists in database",
@@ -21,7 +55,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.SwaggerList"
+                            "$ref": "#/definitions/models.SwaggerLists"
                         }
                     }
                 }
@@ -71,6 +105,14 @@
             }
         },
         "models.SwaggerList": {
+            "type": "object",
+            "properties": {
+                "list": {
+                    "$ref": "#/definitions/models.List"
+                }
+            }
+        },
+        "models.SwaggerLists": {
             "type": "object",
             "properties": {
                 "list": {
